yunapbx-appliance: update modules.conf to include disabled modules

--- a/system/yunapbx-appliance/image_files/etc/asterisk/modules.conf
+++ b/system/yunapbx-appliance/image_files/etc/asterisk/modules.conf
@@ -1,2 +1,9 @@
 [modules]
 autoload = yes
+
+noload => cdr_custom.so
+noload => cdr_manager.so
+noload => cdr_syslog.so
+noload => cdr_adaptive_odbc.so
+noload => res_config_curl.so
+noload => res_config_odbc.so
