yunapbx-appliance: keep certmonger files between upgrades

--- a/system/yunapbx-appliance/image_files/etc/sysupgrade.conf
+++ b/system/yunapbx-appliance/image_files/etc/sysupgrade.conf
@@ -1,3 +1,6 @@
+/etc/certmonger/cas
+/etc/certmonger/local
+/etc/certmonger/requests
 /etc/config/network
 /etc/dropbear/dropbear_rsa_host_key
 /etc/ssl/private
