certmonger: fix TALLOC_LIBS

--- a/utils/certmonger/Makefile
+++ b/utils/certmonger/Makefile
@@ -21,7 +21,7 @@ PKG_MAINTAINER:=Jan Havelka <dzavy@dzavy.net>
 include $(INCLUDE_DIR)/package.mk
 
 CONFIGURE_ARGS+= --with-file-store-dir=/etc/certmonger
-TARGET_CFLAGS += -L$(STAGING_DIR)/lib
+CONFIGURE_VARS+= TALLOC_LIBS="-L$(STAGING_DIR)/usr/lib -L$(STAGING_DIR)/lib -ltalloc -lbsd"
 
 define Package/certmonger
 	SECTION:=utils
