move luadbi sources from code.google.com to github

--- a/lang/luadbi/Makefile
+++ b/lang/luadbi/Makefile
@@ -11,11 +11,11 @@ PKG_NAME:=luadbi
 PKG_VERSION:=0.5plus
 PKG_RELEASE:=1
 
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-PKG_SOURCE_PROTO:=hg
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE_PROTO:=git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE_URL:=https://code.google.com/p/luadbi/
-PKG_SOURCE_VERSION:=c0f1ba5ac868bf2b1a7812432247d195daf57a6b
+PKG_SOURCE_URL:=https://github.com/dzavy/luadbi.git
+PKG_SOURCE_VERSION:=8a736b9d3a0f544aeb2605ffdcf4d140ac5ea3bc
 
 PKG_LICENSE_FILES:=COPYING
 
