migrate from mysql to mariadb

--- a/system/yunapbx-appliance/image_files/etc/mysql/my.cnf
+++ b/system/yunapbx-appliance/image_files/etc/mysql/my.cnf
@@ -4,20 +4,20 @@ socket                  = /var/run/mysql/mysqld.sock
 default-character-set	= utf8
 
 [mysqld]
-user                    = mysql
+user                    = mariadb
 socket                  = /var/run/mysql/mysqld.sock
 pid_file                = /var/run/mysql/mysqld.pid
 basedir                 = /usr
 datadir                 = /data/mysql/
 tmpdir                  = /tmp/
-skip-external-locking   = true
+skip-external-locking
 skip-networking
 event_scheduler         = on
 character-set-server    = utf8
 collation-server        = utf8_general_ci
 
 # Fine Tuning
-key_buffer              = 16M
+key_buffer_size         = 16M
 max_allowed_packet      = 16M
 thread_stack            = 192K
 thread_cache_size       = 8
