--- a/system/yunapbx-appliance/image_files/etc/odbc.ini
+++ b/system/yunapbx-appliance/image_files/etc/odbc.ini
@@ -1,5 +1,5 @@
 [mysql]
-Driver       = /usr/lib/libmyodbc5.so
+Driver       = MySQL
 Server       = localhost
 User         = root
 Database     = yunapbx
