fixed typo in so name

--- a/libs/mariadb-connector-odbc/files/mysql.ini
+++ b/libs/mariadb-connector-odbc/files/mysql.ini
@@ -1,9 +1,9 @@
 [MySQL]
 Description     = MySQL ODBC driver for Linux
-Driver          = /usr/lib/libmaodbc.so.so
+Driver          = /usr/lib/libmaodbc.so
 FileUsage       = 1
 
 [MariaDB]
 Description     = MariaDB ODBC driver for Linux
-Driver          = /usr/lib/libmaodbc.so.so
+Driver          = /usr/lib/libmaodbc.so
 FileUsage       = 1
