--- a/system/yunapbx-appliance/image_files/etc/mysql/my.cnf
+++ b/system/yunapbx-appliance/image_files/etc/mysql/my.cnf
@@ -15,6 +15,8 @@ skip-networking
 event_scheduler         = on
 character-set-server    = utf8
 collation-server        = utf8_general_ci
+default-storage-engine  = myisam
+innodb                  = OFF
 
 # Fine Tuning
 key_buffer_size         = 16M
