--- a/system/yunapbx-appliance/image_files/etc/mysql/my.cnf
+++ b/system/yunapbx-appliance/image_files/etc/mysql/my.cnf
@@ -1,31 +1,32 @@
 [client]
-port                    = 3306
-socket                  = /var/run/mysql/mysqld.sock
-default-character-set	= utf8
+default-character-set	   = utf8
+port                       = 3306
+socket                     = /var/run/mysql/mysqld.sock
 
 [mysqld]
-user                    = mariadb
-socket                  = /var/run/mysql/mysqld.sock
-pid_file                = /var/run/mysql/mysqld.pid
-basedir                 = /usr
-datadir                 = /data/mysql/
-tmpdir                  = /tmp/
+basedir                    = /usr
+character-set-server       = utf8
+collation-server           = utf8_general_ci
+datadir                    = /data/mysql/
+default-storage-engine     = MyISAM
+default-tmp-storage-engine = MyISAM
+event_scheduler            = on
+innodb                     = OFF
+key_buffer_size            = 16M
+max_allowed_packet         = 16M
+pid_file                   = /var/run/mysql/mysqld.pid
 skip-external-locking
 skip-networking
-event_scheduler         = on
-character-set-server    = utf8
-collation-server        = utf8_general_ci
-
-# Fine Tuning
-key_buffer_size         = 16M
-max_allowed_packet      = 16M
-thread_stack            = 192K
-thread_cache_size       = 8
+socket                     = /var/run/mysql/mysqld.sock
+thread_cache_size          = 8
+thread_stack               = 192K
+tmpdir                     = /tmp/
+user                       = mariadb
 
 [mysqldump]
+max_allowed_packet         = 16M
 quick
 quote-names
-max_allowed_packet      = 16M
 
 [isamchk]
-key_buffer              = 16M
+key_buffer                 = 16M
